css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&display=swap');

:root
{
--main1: #303434;
--main2: #72d0e7;
--main3: #FFFAFA;
--main4: #0db7dd;
}


.navbar{
    background-color: var(--main4);
    color: var(--main3);
    display: flex;
    justify-content: space-around;
    align-items: center;
    font-size: 20px;
}

.nav-list{
    list-style-type: none;
}

.nav-list .list-item{
    display: inline-block;
    padding: 20px 10px;
}

.navbar a{
    color: var(--main3);
    text-decoration: none;
}

.navbar a:hover{
    background-color: var(--main2);
    color: var(--main3);
}

.menu-line{
    width: 20px;
    height: 3px;
    background-color: white;
    margin-bottom: 4px;
}


body {
    background-color: #9cc9de;
}

.container{
    width: 85%;
    background: #fff;
    border-radius: 6px;
    padding: 20px 60px 30px 40px;
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
    margin: 20px auto;
    height: auto;
  }

.break{

    margin: 175px auto;
    border: dotted black 10px;
    border-bottom: 0;
    width: 16rem;

}

li, a{
    font-family: 'Grand Hotel', cursive;
    font-weight: 500;
    color: #edf0f1;
}

.logo{
    font-family: 'Grand Hotel', cursive;
    font-weight: 500;
    font-size: 35px;
    color:white;
    padding-bottom: 20px;
    /* margin-top: 20px;
    margin-left:30px; */
    padding-left: 15px;
}

.skill-bar h1{
    font-family: 'Grand Hotel', cursive;
    font-size: 150px;
    text-align: center;

}

.work {
    width: 20%;
    display: inline-block;
    border-radius: 12px;
    border: 1px solid rgb(202, 200, 200);
    margin-left: 3%;
    height: 350px;
  }

.about-me h1{
        font-family: 'Grand Hotel', cursive;
        font-size: 70px;
        text-align: center;
}

.about-me-heading{
    font-family: 'Grand Hotel', cursive;
    font-size: 70px;
    text-align: center;
}
.skill-bar{
        display: flex; 
        flex-direction: column;
        align-items: center;

}

.about-me-img-flex{
    width: 25%;

}

.about-me {
    padding-top: 100px;
    display: flex;
    justify-content: space-between;
    flex-direction: row;
}

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* .topnav {
    background-color: var(--main4);
    overflow: hidden;
  }

  .topnav a {
    float: right;
    color: var(--main3);
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 20px;
    transition: all 0.5s ease;
  }

  .topnav a:hover {
    background-color: var(--main2);
    color: var(--main3);
  } */


  .align-img{
      max-width: 480px;
      width: 100%;
      height: auto;
      display: block;
      margin: 15px 0px;
      margin-left: -80px;
  }

  .skill-content{
    font-family: 'Grand Hotel', cursive;
    font-size: 40px;
    margin-left: 45%;
  }

  .aboutme-content {
    /* margin-left: 400px; */
    margin-right: 10px;
    margin-top: auto;
    margin-bottom: auto;
}

  .aboutme-content p{
    font-family: 'Roboto', sans-serif;
    align-items: center;

  }
  

  .header {
    width: 100%;
    height: 900px;
    background-image: url("/images/resized2.png");
    background-size: 100%, cover;
    background-repeat: no-repeat;
    background-attachment: scroll, fixed;
    position: relative;
}

.icon-details{
    text-align: center;
    font-size: 30px;
    color: blueviolet;
}

.contact-details{
    font-family: 'Roboto', sans-serif;
    text-align: center;
}

.contact-details p{
    font-family: 'Roboto', sans-serif;
    text-align: center;
    font-size: 20px;
}

.work-container-container{
    width: auto;
    height: auto;
    text-align: center;
}

.work-container{
    width: 350px;
    background: #fff;
    border-radius: 6px;
    padding: 20px 60px 30px 40px;
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
    margin: 10% 4%;
    height: 350px;
    display: inline-block;
}

.resposive{
  width: 100%;
  height: 300px;
  object-fit: cover;
  object-position: bottom;
}

.resposive-img{
    width: 100%;
  height: auto;
}

.work-container img{
    height: 200px;
    width: 200px;
} 

.cursive{
    font-family: 'Grand Hotel', cursive;
}

.message{
    font-family: 'Roboto', sans-serif;
}

@media all and (max-width: 484px) {

    .navbar{
        flex-direction: column;
    }

    .menu {
        display: block;
    }

    
}

